[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/user interface/ChangeSceneButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/user interface/themes/AlloyInk-lgdWw.otf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/user interface/themes/main_theme.tres" type="Theme" id=3]
[ext_resource path="res://src/screens/PasswordField.gd" type="Script" id=4]
[ext_resource path="res://src/screens/LoginScreen.gd" type="Script" id=5]
[ext_resource path="res://src/screens/MailField.gd" type="Script" id=6]
[ext_resource path="res://assets/user interface/backgrounds/Login.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_color = Color( 1, 0.8, 0, 1 )
font_data = ExtResource( 2 )

[node name="LoginScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 5 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true

[node name="MailField" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -220.0
margin_right = 300.0
margin_bottom = -70.0
align = 1
placeholder_text = "Email"
script = ExtResource( 6 )

[node name="PasswordField" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -56.0
margin_right = 300.0
margin_bottom = 94.0
align = 1
secret = true
placeholder_text = "Password"
script = ExtResource( 4 )

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -214.0
margin_top = 112.0
margin_right = 214.0
margin_bottom = 712.0
custom_constants/separation = 15

[node name="LoginButton" parent="Menu" instance=ExtResource( 1 )]
margin_right = 428.0
margin_bottom = 190.0
rect_pivot_offset = Vector2( 200, 100 )
text = "LOGIN"

[node name="CreateAccount" parent="Menu" instance=ExtResource( 1 )]
margin_top = 205.0
margin_right = 428.0
margin_bottom = 395.0
rect_pivot_offset = Vector2( 200, 100 )
text = "CREA ACCOUNT"
next_scene_path = "res://src/screens/RegistrationScreen.tscn"

[node name="BackButton" parent="Menu" instance=ExtResource( 1 )]
margin_top = 410.0
margin_right = 428.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 200, 100 )
text = "INDIETRO"
next_scene_path = "res://src/screens/ChoiseScreen.tscn"

[node name="Notification" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.864062
anchor_right = 0.5
anchor_bottom = 0.864062
margin_left = -630.5
margin_top = -79.0
margin_right = 630.5
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 0.8, 0, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Menu/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
